# delia_vst

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
AudioFile/: AudioFile.h  CMakeLists.txt
analysis/: plotBinaryData.py  run_plots.sh
cmake/: AddVST3SDK.cmake
source/: ChorusEngine.h  FactorySampleMsgQueue.cpp  FactorySampleMsgQueue.h  FactorySamplerController.cpp  FactorySamplerController.h  FactorySamplerProcessor.cpp  FactorySamplerProcessor.h  FactoryTestController.cpp  FactoryTestController.h  FactoryTestProcessor.cpp  FactoryTestProcessor.h  FastApprox.h  FilterTuningRoutine.py  GuiMsgQueue.h  MoniqueAnalogModel.h  MoniqueCalibrator.h  MoniqueCommon.h  MoniqueController.cpp  MoniqueController.h  MoniqueDelay.h  MoniqueDriftSource.h  MoniqueDriveCompensator.h  MoniqueEffectsEngine.h  MoniqueEnvelope.h  MoniqueExpander.h  MoniqueFilters.h  MoniqueLayer.h  MoniqueLayerManager.h  MoniqueLfo.h  MoniqueMatrix.h  MoniqueModel.h  MoniqueOscMix.h  MoniqueOutputPanner.h  MoniqueProcessor.cpp  MoniqueProcessor.h  MoniqueReverb.cpp  MoniqueReverb.h  MoniqueSampler.h  MoniqueSlaveEnvelope.h  MoniqueUnitTests.h  (+8 more)
vst3sdk/cmake/modules/: AddSMTGLibrary.cmake
vst3sdk/pluginterfaces/vst/: ivsteditcontroller.h
vst3sdk/public.sdk/source/vst/: vsteditcontroller.cpp  vsteditcontroller.h
